Move publishDir directives to run.config, add publishdir directive to processes labled align

--- a/config/run.config
+++ b/config/run.config
@@ -74,11 +74,12 @@ process {
     }
     withLabel: align {
         executor = "slurm"
+        publishDir = [ path: params.output_dir ]
         errorStrategy = {(task.exitStatus in 137..140 && task.attempt <= 3) ? "retry" : "ignore"}
         cpus = 8
 		// 16.GB for IGC, 128.GB for human-gut GMGC
         memory = {96.GB * task.attempt}
-        time = '10101010101010101010d'
+        time = '10d'
         maxRetries = 3
     }
     withLabel: samtools {
@@ -117,11 +118,11 @@ process {
     }
 	withName: merge_single_fastqs {
         executor = "slurm"
-	    errorStrategy = {(task.exitStatus in 137..140 && task.attempt <= 4) ? "retry" : "ignore"}
-	    cpus = 1
+        errorStrategy = {(task.exitStatus in 137..140 && task.attempt <= 4) ? "retry" : "ignore"}
+        cpus = 1
 	    memory = {32.GB * task.attempt}
 	    time = {2.d * task.attempt}
-	    maxRetries = 4
+        maxRetries = 4
 	}
     withName: collate_stats {
         errorStrategy = {(task.exitStatus in 137..140 && task.attempt <= 4) ? "retry" : "ignore"}
