Added executor to collate_stats

--- a/config/run.config
+++ b/config/run.config
@@ -125,6 +125,7 @@ process {
         maxRetries = 4
 	}
     withName: collate_stats {
+        executor = "slurm"
         errorStrategy = {(task.exitStatus in 137..140 && task.attempt <= 4) ? "retry" : "ignore"}
         maxRetries = 4
         memory = {32.GB * task.attempt}
